--- a/src/station6.html
+++ b/src/station6.html
@@ -15,6 +15,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content=" file:///Users/takumitsuda/Desktop/html-stations/src/station6.html" />
         <meta name="twitter:card" content="summary"></meta>
+        <meta name="twitter:creator" content="summary"></meta>
     </header>
     <div class="card">
       <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="電車のイラストです."/>
