--- a/src/station6.html
+++ b/src/station6.html
@@ -15,6 +15,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content=" file:///Users/takumitsuda/Desktop/html-stations/src/station6.html" />
         <meta name="twitter:card" content="summary"></meta>
+        <meta name="twitter:site" content="@taku" />
         <meta name="twitter:creator" content="takumi/@taku"></meta>
     </header>
     <div class="card">
