--- a/src/station6.html
+++ b/src/station6.html
@@ -15,8 +15,8 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content=" file:///Users/takumitsuda/Desktop/html-stations/src/station6.html" />
         <meta name="twitter:card" content="summary"></meta>
-        <meta name="twitter:site" content="@taku" />
-        <meta name="twitter:creator" content="takumi/@taku"></meta>
+        <meta name="twitter:site" content="@" />
+        <meta name="twitter:creator" content="@masteryoudar"></meta>
     </header>
     <div class="card">
       <img src="./assets/image/railway-thumbnail.png" class="card__img-top" alt="電車のイラストです."/>
