--- a/src/station11.html
+++ b/src/station11.html
@@ -8,8 +8,8 @@
     <script type="text/javascript">
         function getData() {
             const argumentArray = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n'];
-            const cha = hogehoge(argumentArray);
-            return cha
+
+            return hogehoge('a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n');
         }
 
         // ↓こちらの関数は触らないこと
